angular routing, details components, example auth component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <h1>First app with angular</h1>
+<a routerLink="/list"> list</a>
 <hr>
-
-<quotes-list></quotes-list>
+<router-outlet></router-outlet>
