tasklist route, tasklist components, fake api for tasks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <h1>First app with angular</h1>
+<hr>
 <a routerLink="/list"> list</a>
+<a routerLink="/tasklist"> task list</a>
 <hr>
 <router-outlet></router-outlet>
