--- a/src/app/add-task/add-task.component.html
+++ b/src/app/add-task/add-task.component.html
@@ -1,15 +1,15 @@
-<form class="add-form">
+<form class="add-form" (ngSubmit)="onSubmit()" *ngIf="showAddTask">
   <div class="form-control">
     <label for="text">Task</label>
-    <input type="text" name="text" id="text" placeholder="Add Tast Text">
+    <input type="text" name="text" id="text" placeholder="Add Tast Text" [(ngModel)]="text">
   </div>
   <div class="form-control">
     <label for="day">Day & Time</label>
-    <input type="text" name="day" id="day" placeholder="Add Day & Time">
+    <input type="text" name="day" id="day" placeholder="Add Day & Time" [(ngModel)]="day">
   </div>
   <div class="form-control form-control-check">
     <label for="reminder">Reminder</label>
-    <input type="checkbox" name="reminder" id="reminder">
+    <input type="checkbox" name="reminder" id="reminder" [(ngModel)]="reminder">
   </div>
 
   <input type="submit" value="Save Task" class="btn">
