--- a/src/app/tasklist/tasklist.component.html
+++ b/src/app/tasklist/tasklist.component.html
@@ -1,5 +1,5 @@
 <header class="container">
   <h1>{{title}}</h1>
-  <tasklist-button color="green" text="Add Task" (btnClick)="toggleAddTask()"></tasklist-button>
+  <tasklist-button color="{{showAddTask ? 'red' : 'green'}}" text="{{showAddTask ? 'Close' : 'Add Task'}}" (btnClick)="toggleAddTask()"></tasklist-button>
   <tasks></tasks>
 </header>
